--- a/index.tex
+++ b/index.tex
@@ -513,8 +513,8 @@ structure for recording decisions is as follows:
 For the ease of tracking, we extract the original text describing each
 decision verbatim, without paraphrasing or summary.
 
-\subsection{Extract decisions automatically from literature with
-LLMs}\label{extract-decisions-automatically-from-literature-with-llms}
+\subsection{Extract decisions from literature with
+LLMs}\label{extract-decisions-from-literature-with-llms}
 
 Manually extracting decisions from published papers is labor-intensive
 and time-consuming. Large language models (LLMs) make it possible to
@@ -635,7 +635,7 @@ After identifying a set of relevant papers, a prompt has been designed
 to guide the LLM in extracting decisions from the documents. The
 extracted outputs are then validated and standardized before further
 analysis. The resulting dataset can then be used for exploratory data
-analysis and in addition, we propose a paper similarity metric tol
+analysis and in addition, we propose a paper similarity metric to
 quantify similarity in decision-making across papers. This measure can
 be interpreted as a distance metric between papers and used for
 clustering and dimension reduction to visualize patterns in
@@ -652,10 +652,9 @@ decision-making across the literature.
 \caption{\label{fig-workflow}The workflow for extracting decisions from
 published literature using Large Language Models (LLMs) and analyzing
 the extracted decisions. The workflow consists of four main steps: (1)
-Extract decisions automatically from literature with LLMs, (2) Validate
-and standardize LLM outputs, (3) Conduct exploratory data analysis on
-analytic decisions, and (4) visualization with clustering or dimension
-reduction methods.}
+Extract decisions from literature with LLMs, (2) Validate and
+standardize LLM outputs, (3) Conduct exploratory data analysis on
+analytic decisions, including calculating paper similarity score.}
 
 \end{figure}%
 
